syntax = "proto3";

option java_multiple_files = true;
option java_package = "br.com.zup.academy.erombi";

package br.com.zup.academy.erombi;

service KeyManagerGrpcService {

  rpc cadastrarKey(NovaKeyRequest) returns (NovaKeyResponse) {}

}

enum TipoKey {
    CPF = 0;
    CNPJ = 1;
    PHONE = 2;
    EMAIL = 3;
    RANDOM = 4;
}

enum TipoConta {
    CACC = 0;
    SVGS = 1;
}

message NovaKeyRequest {
  string uuidCliente = 1;
  TipoKey tipoKey = 2;
  string key = 3;
  TipoConta tipoConta = 4;

}

message NovaKeyResponse {
  string pixId = 1;
}
